fix annoying visibility bug / portfolio

--- a/sass/_angular-carousel.scss
+++ b/sass/_angular-carousel.scss
@@ -17,10 +17,9 @@
     padding-bottom: 44px;
     padding-top: 0px;
     cursor: default; 
-    
-overflow-x:hidden;
-overflow-y:visible;
--webkit-overflow-scrolling: touch; //adding this line will enable inertial scrolling
+		overflow-x:hidden;
+		overflow-y:visible;
+		-webkit-overflow-scrolling: touch; //adding this line will enable inertial scrolling
 }
 .my-slider li div.debug {
     box-sizing: border-box;
@@ -37,7 +36,7 @@ overflow-y:visible;
     // text-align:center;
     padding:0px;
     // font-size:20px;
-    padding-top: 44px;
+    // padding-top: 44px;
 
 }
 
