--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -68,7 +68,7 @@ html {
 	@include adjust-leading-to($set-leading);
 	font-size: $base-font-size;
 	// height: 100%;
-	height: 100%;
+//	height: 100%;
 }
 
 
@@ -80,7 +80,7 @@ body {
 	// @include grid-background;
 	// overflow-x: hidden;
 	// min-height: 600px !important;
-	height: 100%;
+	//height: 100%;
 }
 
 .maincolumn, .mainheading {
@@ -292,7 +292,21 @@ p span {
 	// font-weight: 700;
 	}
 	
-	
+.lis p {
+	display: list-item;
+	list-style-type: disc;
+	text-indent: 0px;
+	padding: 10px 0px 0px 0px !important;
+  overflow-x: visible;
+  height: auto;
+  padding-left: 0px;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-left: 30px;
+  margin-right: 30px;
+  text-align: left !important;
+}	
 
 p {
 	orphans: 2;
@@ -356,8 +370,7 @@ header + :not(header) {
 img {  
 max-width: 100%;
 height: auto;
-
-    -webkit-user-drag: none;
+-webkit-user-drag: none;
 
 } 
 
@@ -551,7 +564,17 @@ nav.mainnavi ul li.togglebut a {
 }
 
 
-
+.cd-timeline-content ul.lis li {
+	list-style: disc;
+	overflow-x: visible;
+	height: auto;
+	padding-left: 0px;
+	padding-top: 10px;
+	padding-bottom: 0px;
+	margin-top: 0px;
+	margin-left: 20px;
+	margin-right: 20px;
+}
 
 .maincolumn ul.lis li {
 	list-style: disc;
@@ -565,17 +588,7 @@ nav.mainnavi ul li.togglebut a {
 	margin-right: 15px;
 }
 
-.cd-timeline-content ul.lis li {
-	list-style: disc;
-	overflow-x: visible;
-	height: auto;
-	padding-left: 0px;
-	padding-top: 10px;
-	padding-bottom: 0px;
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-right: 20px;
-}
+
 
 
 .maincolumn h1, h2, h3, summary, p, ul.lis, .mainheading h1, h2, h3, summary, aside, p, ul.lis, .colwrapper  {
